--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<meta charset="utf-8">
-<title>Simple React, webpack boilerplate</title>
-<div id="app"></div>
-<script src="build/bundle.js"></script>
+<!DOCTYPE html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Wild Wild West - Teleturniej IIIF</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./styles.css" media="screen" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="scripts/qrcode.lib.min.js"></script>
+  <script src="build/bundle.js"></script>
+</body>
