She's got the look

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <title>QR Code Scanner</title>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Arbutus" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="h-full container p-4 mx-auto"></div>
   </body>
 </html>
