Added feedback after question answer, icon, title and GA

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>QR Code Scanner</title>
+    <title>Teleturniej Dziki Zachód</title>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Arbutus" rel="stylesheet">
   </head>
   <body>
     <div id="app" class="h-full container p-4 mx-auto"></div>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86197311-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-86197311-2');
+    </script>
   </body>
 </html>
