--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Teleturniej Dziki Zachód</title>
+    <title>Teleturniej Dziki Zachód 2.0</title>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
